--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,4 +15,16 @@ spec:
         - name: frontend
           # 여러분의 image 주소를 입력해주세요.
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_689e3a52a1b2
-          
+          volumeMounts:
+            - name: nalsee
+              mountPath: /app/.env
+              subPath: .env
+              readOnly: true
+      volumes:
+      - name: nalsee
+        secret:
+          secretName: my-secret
+          items:
+            - key: .env
+              path: .env
+          optional: false
