--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,7 @@ jobs:
             cha3n/nalsee-front-pwa:${{ github.sha }}
           build-args: |
             VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }}
+            VITE_OAUTH2_REDIRECT_URI=${{ secrets.VITE_OAUTH2_REDIRECT_URI }}
             VITE_KAKAO_API_KEY=${{ secrets.VITE_KAKAO_API_KEY }}
             VITE_KAKAO_RESTAPI_KEY=${{ secrets.VITE_KAKAO_RESTAPI_KEY }}
             VITE_FIREBASE_VAPID_KEY=${{ secrets.VITE_FIREBASE_VAPID_KEY }}
